--- a/src/assets/styles/About.css
+++ b/src/assets/styles/About.css
@@ -1,6 +1,26 @@
 .about {
-  display: flex;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
   height: 100vh;
-  justify-content: center;
-  align-items: center;
+  position: relative;
+}
+
+.about::before {
+  content: "";
+  background: url("../img/background.jpg");
+  background-size: cover;
+  background-position: center top;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.about .paragraph {
+  width: 40rem;
+  font-size: 2rem;
+  padding: 4rem 1rem 2rem 4rem;
+  color: white;
 }
