--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,46 @@ body {
   width: 120px;
   height: 80px;
 }
+
+.routers {
+  margin-left: 12rem;
+}
+
+.buttons {
+  display: flex;
+}
+
+.buttons .btn {
+  padding: 5px 10px;
+  border: 1px solid #000;
+  margin: 0 7px;
+}
+
+.buttons .btn:hover {
+  background-color: blueviolet;
+  color: white;
+}
+
+@media (max-width: 1200px) {
+  .routers {
+    margin-left: 1rem;
+  }
+}
+
+@media (max-width: 990px) {
+  .routers > * {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 5px;
+  }
+
+  .routers > *:hover {
+    background-color: red;
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
