--- a/src/assets/styles/Cart.css
+++ b/src/assets/styles/Cart.css
@@ -1,3 +1,10 @@
+.cartContainer {
+  width: 100%;
+  height: 400px;
+  background-color: aqua;
+  margin: 20px;
+}
+
 .cart {
   display: flex;
   height: 100vh;
