--- a/src/assets/styles/Login.css
+++ b/src/assets/styles/Login.css
@@ -1,6 +1,121 @@
+.Auth {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  gap: 4rem;
+  position: relative;
+  background: hsla(239, 100%, 67%, 1);
+
+  background: linear-gradient(
+    90deg,
+    hsla(239, 100%, 67%, 1) 0%,
+    hsla(187, 100%, 89%, 1) 100%,
+    hsla(202, 25%, 63%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(239, 100%, 67%, 1) 0%,
+    hsla(187, 100%, 89%, 1) 100%,
+    hsla(202, 25%, 63%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(239, 100%, 67%, 1) 0%,
+    hsla(187, 100%, 89%, 1) 100%,
+    hsla(202, 25%, 63%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#595CFF", endColorstr="#C6F8FF", GradientType=1 );
+}
+
+.Auth > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* left side */
+
+.a-left {
+  gap: 2rem;
+}
+
+.a-left > img {
+  width: 8rem;
+  height: 8rem;
+  background-color: transparent;
+}
+
+.Webname > span {
+  font-size: 3rem;
+  color: #eee;
+  background-image: linear-gradient(98.63deg, #f9a225 0%, #f95f35 100%);
+  background-size: 100%;
+  border-radius: 4px;
+  background-repeat: no-repeat;
+  padding: 0 1rem;
+}
+
+.Webname > h5 {
+  font-size: 1.3rem;
+}
+
 .login {
   display: flex;
-  height: 100vh;
+  width: 300px;
+  height: 300px;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 12rem;
+}
+
+.login > h2 {
+  color: chocolate;
+}
+
+.loginForm {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.loginForm > input {
+  width: 100%;
+  height: 2.2rem;
+  outline: none;
+  border: 1px solid gray;
+  border-radius: 4px;
+}
+
+.loginForm > div {
+  color: red;
+  font-size: 12px;
+}
+
+.mySpan {
+  font-size: 13px;
+  align-self: center;
+}
+
+.mySpan > a {
+  font-size: 14px;
+  color: chocolate;
+}
+
+.loginForm > .loginButton {
+  width: 18rem;
+  height: 2.2rem;
+  background-color: blueviolet;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+  border-radius: 4px;
 }
